--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=zj2x67aktl2o6q2n.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=airportdb
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=k8rvulza0bp1o5ng
+DB_USERNAME=a6ygn6ad3bimei0m
+DB_PASSWORD=ty8v4w3mu0eqh6rg
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
