atualizar env example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:1BE+zzEPM3fPI1GSOK/qkgzvGKWQjk1+0zvBBofCV24=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://airport-api-40ce70907706.herokuapp.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
